                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.0.3

  *) [TS-876] forward map based on request receive port

  *) [TS-1004] Transformation plugins cause connection close when content
   length is not known ahead. Author: Otto van der Schaaf.

  *) [TS-1055]: Wrong implementation of TSHttpSsnArgGet().
    Author: Yakov Kopel

  *) [TS-1074] PluginVC should schedule to the local queue instead of the
  external queue.

  *) [TS-1066] TSHttpTxnServerReqHdrBytesGet in InkAPI.cc has an extra
   parameter (int *bytes) from the prototype in <ts/ts.h>.
   Author: Alistair Stevenson

  *) [TS-874] make asf-dist work with git repo

  *) [TS-1038] SHttpTxnErrorBodySet() can leak memory.

  *) [TS-1095] ts.h.in has incorrect declaration for TSFetchURL

  *) [TS-1014] slow log can not print logs well on 32-bit system,
  changed the %d to RPI64. Author: weijin.

  *) [TS-830] Better error when there are CLI permission problems, or
   other problems preventing operation. Author: AdunGaos.

  *) [TS-1046] Add possibility to extend tsxs command line for -Iincludes.

  *) [TS-1047] fix lots of spelling mistakes
   Author: Arno Töll

Changes with Apache Traffic Server 3.0.2
  *) [TS-1030] Improve hashing mechanism on WKS.

  *) [TS-1011]: SSL doesn't work on Solaris.

  *) [TS-1028] Avoid triggering assert when running debug build and enabling
   per-thread connection pols

  *) [TS-1021] Remove extra newline from binary logs.

  *) [TS-1013]: Allow ssl_multicert.config to support CA chains per host

  *) [TS-944]: ssl.server.cert.path & ssl.server.private_key.path do not work as expected

  *) [TS-906]: We do not honor / use the configuration option for
   proxy.config.http.forward.proxy_auth_to_parent.

  *) [TS-967]: Allow for our default -O3 options to be overriden via CFLAGS/CXXFLAGS
   Author: Arno Toell and igalic

  *) [TS-969] tests failing on some Debian sid and Solaris
