@@ -40,12 +40,6 @@ A list of all bugs open for the next v3.0.4 release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  *) invalid setting of proxy.config.cluster.ethernet_interface will prevent traffc_manager from starting
-   Master patch SHA: 519a06b1faeab5b431c47acb0e4934df0b3b5534
-   Trunk patch: http://svn.apache.org/viewvc?view=rev&rev=1137894
-   Jira: https://issues.apache.org/jira/browse/TS-845
-   +1: zym, zwoop, igalic
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
